--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<p class="commonright">姓名：<a href="#">张华彬</a></p>
 					<p class="commonright">日期：<a href="#"><font face="comic sans ms">2014-05-23</font></a></p>
 					<iframe src="http://ghbtns.com/github-btn.html?user=zhanghuabin&repo=bd-spark-core-intro&type=fork"
-					  allowtransparency="true" frameborder="0" scrolling="0" width="132" height="20"></iframe>
+					  allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
 					<iframe src="http://ghbtns.com/github-btn.html?user=zhanghuabin&repo=bd-spark-core-intro&type=watch"
 					  allowtransparency="true" frameborder="0" scrolling="0" width="165" height="20"></iframe>
 				</section>
@@ -45,7 +45,7 @@
 						<li class="fragment commoncsm">基于内存的迭代式数据分析集群计算框架</li>
 						<li class="fragment commoncsm">由UC Berkeley AMPLab贡献，已为Apache顶级项目</li>
 						<li class="fragment commoncsm">基于分布式的内存数据集缓存，使得分析速度大幅提升</li>
-						<li class="fragment commoncsm">支持多种计算模型</li>
+						<li class="fragment commoncsm">支持多种计算模型（MR、Streaming、Machine Learning、Graph）</li>
 					</ol>
 				</section>
 
@@ -56,7 +56,7 @@
 				<section>
 					<h3 class="commontitle commongreen">RDD(Resilient Distributed Dataset)</h3>
 					<ol>
-						<li class="fragment commoncsm">利用checkpoint和lineage提供容错</li>
+						<li class="fragment commoncsm">容错</li>
 						<li class="fragment commoncsm">支持全内存、全磁盘或者混合共3种存储模式</li>
 						<li class="fragment commoncsm">惰性</li>
 					</ol>
